# coarch

./: .flake8  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  PERFORMANCE_OPTIMIZATION.md  PLANNING.md  README.md  benchmark.py  benchmark_repo.py  benchmark_rust.py  benchmark_rust_vs_python.py  benchmark_treesitter.py  coarch.db  coarch_index.db  demo.py  docker-compose.yml  index_repo.py  live_demo.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  test_core.py
backend/: __init__.py  ast_analyzer.py  bm25_index.py  config.py  container.py  embedding_cache.py  embeddings.py  exceptions.py  faiss_index.py  file_watcher.py  gpu_embeddings.py  hybrid_indexer.py  hybrid_search.py  indexer.py  logging_config.py  main.py  memory_manager.py  optimized_embeddings.py  progress_tracker.py  security.py  server.py  signal_handler.py  tree_sitter_c.py  unified_config.py  validation.py
benchmarks/: benchmark.py  benchmark_repo.py  benchmark_rust.py  benchmark_rust_vs_python.py  benchmark_treesitter.py
cli/: __init__.py  main.py
examples/: demo.py  demo_bm25_hybrid.py  demo_bm25_hybrid_fixed.py  demo_bm25_simple.py  demo_completion.py  demo_error_handling.py  demo_memory_management.py  demo_signal_handling.py  live_demo.py
rust-indexer/: Cargo.toml
rust-indexer/src/: lib.rs
tests/: perf_benchmarks.py  run_all_tests.py  smoke_tests.py  test_bm25.py  test_cli_completion.py  test_cli_error_handling.py  test_cli_integration.py  test_coarch.py  test_core.py  test_hybrid_search.py  test_memory_management.py  test_progress_comprehensive.py  test_progress_tracking.py  (+3 more)
(+26 files in other folders)
