[package]
name = "coarch-rust"
version = "0.2.0"
edition = "2021"
description = "High-performance code indexing for Coarch"

[lib]
name = "coarch_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
rayon = "1.10"
dashmap = { version = "6.0", features = ["rayon"] }
lru = "0.16"
tempfile = "3.10"
fxhash = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
